--- a/keystroke-data-visualiser/package.json
+++ b/keystroke-data-visualiser/package.json
@@ -1,17 +1,58 @@
 {
-  "name": "keystroke-data-visualiser",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://uadamo.github.io/feature-collecting-app",
   "dependencies": {
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.108",
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "classnames": "^2.5.1",
+    "crypto-js": "^4.2.0",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.30.1",
+    "node-sass": "^7.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "0.9.5"
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
+    "web-vitals": "^2.1.4"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
+    "firebase": "^10.14.0",
+    "gh-pages": "^6.1.1",
+    "lodash": "^4.17.21"
   }
 }
