--- a/keystroke-data-visualiser/package.json
+++ b/keystroke-data-visualiser/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "node-sass": "^7.0.3",
+    "plotly.js-dist": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
