--- a/keystroke-data-visualiser/package.json
+++ b/keystroke-data-visualiser/package.json
@@ -16,9 +16,11 @@
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "node-sass": "^7.0.3",
+    "plotly.js": "^2.35.2",
     "plotly.js-dist": "^2.35.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -52,6 +54,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "@types/react-plotly.js": "^2.6.3",
     "firebase": "^10.14.0",
     "gh-pages": "^6.1.1",
     "lodash": "^4.17.21"
