--- a/keystroke-data-visualiser/package.json
+++ b/keystroke-data-visualiser/package.json
@@ -23,6 +23,7 @@
     "react-plotly.js": "^2.6.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "statistics.js": "^1.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
